--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Aliance Production</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header header-image">
       <nav class="navbar">
         <a href="./" class="header-logo">
           <img
@@ -48,9 +48,69 @@
           >
         </div>
         <!-- /.header-phone -->
-        <button class="header-button button">Получить консультацию</button>
+        <button class="navbar-button button">Получить консультацию</button>
       </nav>
       <!-- /.navbar -->
+      <div class="container">
+        <div class="header-content">
+          <div class="separator"></div>
+          <h1 class="header-title">
+            Комплексное обеспечение товарами и расходными материалами бизнеса
+          </h1>
+          <p class="header-text">
+            Высокий уровень вовлечения представителей целевой аудитории является
+            четким доказательством простого факта: высококачественный прототип
+            будущего проекта напрямую зависит от анализа существующих паттернов
+            поведения.
+          </p>
+          <div class="button">Подробнее о компании</div>
+        </div>
+        <!-- /.header-content -->
+        <ul class="header-features">
+          <li class="header-features-item">
+            <img
+              src="img/features/1_time.svg"
+              alt="time."
+              class="header-features-icon"
+            />
+            <p class="header-features-text">Непрерывная работа c 2017 года</p>
+          </li>
+          <li class="header-features-item">
+            <img
+              src="img/features/2_sert.svg"
+              alt="sert"
+              class="header-features-icon"
+            />
+            <p class="header-features-text">Вся продукция сертифицирована</p>
+          </li>
+          <li class="header-features-item">
+            <img
+              src="img/features/3_control.svg"
+              alt="control"
+              class="header-features-icon"
+            />
+            <p class="header-features-text">Контроль качества на всех этапах</p>
+          </li>
+          <li class="header-features-item">
+            <img
+              src="img/features/4_delivery.svg"
+              alt="delivery"
+              class="header-features-icon"
+            />
+            <p class="header-features-text">Возможны поставки по всей России</p>
+          </li>
+          <li class="header-features-item">
+            <img
+              src="img/features/5_speed.svg"
+              alt="speed"
+              class="header-features-icon"
+            />
+            <p class="header-features-text">Оперативное производство</p>
+          </li>
+        </ul>
+        <!-- /.header-features -->
+      </div>
+      <!-- /.container -->
     </header>
     <script src="js/main.js"></script>
   </body>
