--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           </li>
           <li class="steps-item">
             <span class="steps-num">02</span>
-            <h3 class="steps-title">Заключение договора</h3>
+            <h3 class="steps-title">Заключение <br />договора</h3>
             <p class="steps-text">
               Лишь интерактивные прототипы призваны к ответу.
             </p>
