fix: tel-icon and features-icons px>rem

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </li>
       </ul>
       <div class="header-phone">
-        <svg class="phone-icon" width="24" height="24">
+        <svg class="phone-icon">
           <use href="img/sprite.svg#phone"></use>
         </svg>
         <a href="tel:+74996861014" class="header-phone-link"
@@ -68,34 +68,34 @@
         <!-- /.header-content -->
         <ul class="header-features">
           <li class="header-features-item">
-            <svg class="logo-svg" width="36" height="36">
+            <svg class="features-icon">
               <use href="img/sprite.svg#1_time"></use>
             </svg>
             <p class="header-features-text">Непрерывная работа c 2017 года</p>
           </li>
           <li class="header-features-item">
-            <svg class="logo-svg" width="36" height="36">
+            <svg class="features-icon">
               <use href="img/sprite.svg#2_sert"></use>
             </svg>
 
             <p class="header-features-text">Вся продукция сертифицирована</p>
           </li>
           <li class="header-features-item">
-            <svg class="logo-svg" width="36" height="36">
+            <svg class="features-icon">
               <use href="img/sprite.svg#3_control"></use>
             </svg>
 
             <p class="header-features-text">Контроль качества на всех этапах</p>
           </li>
           <li class="header-features-item">
-            <svg class="logo-svg" width="36" height="36">
+            <svg class="features-icon">
               <use href="img/sprite.svg#4_delivery"></use>
             </svg>
 
             <p class="header-features-text">Возможны поставки по всей России</p>
           </li>
           <li class="header-features-item">
-            <svg class="logo-svg" width="36" height="36">
+            <svg class="features-icon">
               <use href="img/sprite.svg#5_speed"></use>
             </svg>
             <p class="header-features-text">Оперативное производство</p>
