--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
         </ol>
       </div>
       <!-- /.container -->
+      <div></div>
     </section>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
