--- a/index.html
+++ b/index.html
@@ -157,33 +157,33 @@
         </div>
         <!-- /.header-content -->
 
-        <!-- Основной блок слайдера -->
+        <!-- основной блок слайдера -->
         <div class="swiper">
           <!-- обертка слайдера -->
           <ul class="swiper-wrapper header-features">
             <!-- слайды -->
             <li class="swiper-slide header-features-item">
-              <svg width="36" height="36">
+              <svg class="features-icon">
                 <use href="img/sprite.svg#1_time"></use>
               </svg>
               <p class="header-features-text">Непрерывная работа c 2017 года</p>
             </li>
             <li class="swiper-slide header-features-item">
-              <svg width="36" height="36">
+              <svg class="features-icon">
                 <use href="img/sprite.svg#2_sert"></use>
               </svg>
               <p class="header-features-text">Вся продукция сертифицирована</p>
             </li>
             <li class="swiper-slide header-features-item">
-              <svg width="36" height="36">
-                <use href="./img/sprite.svg#3_control"></use>
+              <svg class="features-icon">
+                <use href="img/sprite.svg#3_control"></use>
               </svg>
               <p class="header-features-text">
                 Контроль качества на всех этапах
               </p>
             </li>
             <li class="swiper-slide header-features-item">
-              <svg width="36" height="36">
+              <svg class="features-icon">
                 <use href="img/sprite.svg#4_delivery"></use>
               </svg>
               <p class="header-features-text">
@@ -191,62 +191,27 @@
               </p>
             </li>
             <li class="swiper-slide header-features-item">
-              <svg width="36" height="36">
+              <svg class="features-icon">
                 <use href="img/sprite.svg#5_speed"></use>
               </svg>
               <p class="header-features-text">Оперативное производство</p>
             </li>
           </ul>
 
-          <!-- кнопки навигации вперед назад -->
+          <!-- кнопки вперед назад -->
           <div class="slider-buttons">
-            <div class="sliper-button-prev">
-              <svg width="36" height="24">
+            <div class="slider-button-prev">
+              <svg class="features-icon" width="36" height="24">
                 <use href="img/sprite.svg#arrow-prev"></use>
               </svg>
             </div>
-            <div class="sliper-button-next">
-              <svg width="36" height="24">
+            <div class="slider-button-next">
+              <svg class="features-icon" width="36" height="24">
                 <use href="img/sprite.svg#arrow-next"></use>
               </svg>
             </div>
-            </div>
           </div>
-          <!-- /.slider-buttons -->
         </div>
-        <ul class="header-features">
-          <li class="header-features-item">
-            <svg width="36" height="36">
-              <use href="img/sprite.svg#1_time"></use>
-            </svg>
-            <p class="header-features-text">Непрерывная работа c 2017 года</p>
-          </li>
-          <li class="header-features-item">
-            <svg width="36" height="36">
-              <use href="img/sprite.svg#2_sert"></use>
-            </svg>
-            <p class="header-features-text">Вся продукция сертифицирована</p>
-          </li>
-          <li class="header-features-item">
-            <svg width="36" height="36">
-              <use href="img/sprite.svg#3_control"></use>
-            </svg>
-            <p class="header-features-text">Контроль качества на всех этапах</p>
-          </li>
-          <li class="header-features-item">
-            <svg width="36" height="36">
-              <use href="img/sprite.svg#4_delivery"></use>
-            </svg>
-            <p class="header-features-text">Возможны поставки по всей России</p>
-          </li>
-          <li class="header-features-item">
-            <svg width="36" height="36">
-              <use href="img/sprite.svg#5_speed"></use>
-            </svg>
-            <p class="header-features-text">Оперативное производство</p>
-          </li>
-        </ul>
-        <!-- /.header-features --> 
       </div>
       <!-- /.container -->
     </header>
