--- a/index.html
+++ b/index.html
@@ -102,9 +102,15 @@
         <div class="mobile-menu-line"></div>
       </a>
       <a href="./" class="header-logo">
-        <svg class="logo-svg">
+        <svg class="logo-svg logo-light">
           <use href="img/sprite.svg#logo-light"></use>
         </svg>
+        <svg class="logo-svg logo">
+          <use href="img/sprite.svg#logo"></use>
+        </svg>
+        <!-- <svg class="logo-svg"> старый режим логотипа
+          <use href="img/sprite.svg#logo-light"></use>
+        </svg> -->
       </a>
       <ul class="header-nav">
         <li class="header-nav-item">
