--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             </li>
             <li class="swiper-slide steps-item">
               <span class="steps-num">02</span>
-              <h3 class="steps-title">Заключение <br />договора</h3>
+              <h3 class="steps-title">Заключение договора</h3>
               <p class="steps-text">
                 Лишь интерактивные прототипы призваны к ответу.
               </p>
@@ -281,7 +281,6 @@
       </div>
       <!-- /.container -->
     </section>
-
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
