--- a/index.html
+++ b/index.html
@@ -382,6 +382,43 @@
       </div>
     </section>
     <!-- /.section -->
+    <section class="section-trademarks">
+      <div class="container">
+        <div class="separator"></div>
+        <h2 class="section-title">собственные торговые марки</h2>
+        <div class="trademarks">
+          <a href="#" class="trademark">
+            <div class="tm-image-container">
+              <img class="tm-image" src="/img/tm1_vector.svg" alt="Автохимия AG-Tech">
+            </div>
+            <!-- /.tm-image -->
+            <div class="tm-content">
+              <h3 class="tm-title">Автохимия AG-Tech</h3>
+              <p class="tm-text-bg">
+                Для современного мира разбавленное изрядной долей эмпатии, рациональное мышление создаёт предпосылки для поставленных обществом задач.
+              </p>
+            </div>
+
+            <!-- /.tm-content -->
+          </a>
+          <!-- /.trademark -->
+          <a href="#" class="trademark">
+            <div class="tm-image-container">
+              <img class="tm-image" src="/img/tm2_vector.svg" alt="Автохимия AP">
+            </div>
+            <!-- /.tm-image -->
+            <div class="tm-content">
+              <h3 class="tm-title">Автохимия AP</h3>
+              <p class="tm-text-bg">
+                Для современного мира разбавленное изрядной долей эмпатии, рациональное мышление создаёт предпосылки для поставленных обществом задач.
+              </p>
+            </div>
+
+            <!-- /.tm-content -->
+          </a>
+          <!-- /.trademark -->
+        </div>
+    </section>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
