add: tm block + adaptive v2

--- a/index.html
+++ b/index.html
@@ -388,32 +388,40 @@
         <h2 class="section-title">собственные торговые марки</h2>
         <div class="trademarks">
           <a href="#" class="trademark">
-            <div class="tm-image-container">
-              <img class="tm-image" src="/img/tm1_vector.svg" alt="Автохимия AG-Tech">
-            </div>
-            <!-- /.tm-image -->
-            <div class="tm-content">
-              <h3 class="tm-title">Автохимия AG-Tech</h3>
-              <p class="tm-text-bg">
-                Для современного мира разбавленное изрядной долей эмпатии, рациональное мышление создаёт предпосылки для поставленных обществом задач.
-              </p>
-            </div>
-
+            <div class="tm-container">
+              <div class="tm-image-container">
+                <img class="tm-image" src="/img/tm1_vector.svg" alt="Автохимия AG-Tech">
+              </div>
+              <!-- /.tm-image -->
+              <div class="tm-content">
+                <h3 class="tm-title">Автохимия AG-Tech</h3>
+                <p class="tm-text-bg">
+                  Для современного мира разбавленное изрядной долей эмпатии, рациональное мышление создаёт предпосылки для поставленных обществом задач.
+                </p>
+              </div>
+            </div>            
+            <p class="tm-text-sm">
+              Для современного мира разбавленное изрядной долей эмпатии, рациональное мышление создаёт предпосылки для поставленных обществом задач.
+            </p>
             <!-- /.tm-content -->
           </a>
           <!-- /.trademark -->
           <a href="#" class="trademark">
-            <div class="tm-image-container">
-              <img class="tm-image" src="/img/tm2_vector.svg" alt="Автохимия AP">
-            </div>
-            <!-- /.tm-image -->
-            <div class="tm-content">
-              <h3 class="tm-title">Автохимия AP</h3>
-              <p class="tm-text-bg">
-                Для современного мира разбавленное изрядной долей эмпатии, рациональное мышление создаёт предпосылки для поставленных обществом задач.
-              </p>
-            </div>
-
+            <div class="tm-container">
+              <div class="tm-image-container">
+                <img class="tm-image" src="/img/tm2_vector.svg" alt="Автохимия AP">
+              </div>
+              <!-- /.tm-image -->
+              <div class="tm-content">
+                <h3 class="tm-title">Автохимия AP</h3>
+                <p class="tm-text-bg">
+                  Для современного мира разбавленное изрядной долей эмпатии, рациональное мышление создаёт предпосылки для поставленных обществом задач.
+                </p>
+              </div>
+            </div>            
+            <p class="tm-text-sm">
+              Для современного мира разбавленное изрядной долей эмпатии, рациональное мышление создаёт предпосылки для поставленных обществом задач.
+            </p>
             <!-- /.tm-content -->
           </a>
           <!-- /.trademark -->
