fix: adaptive for 375px screens with zeplin

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             будущего проекта напрямую зависит от анализа существующих паттернов
             поведения.
           </p>
-          <div class="button">Подробнее о компании</div>
+          <div class="company-button button">Подробнее о компании</div>
         </div>
         <!-- /.header-content -->
 
@@ -169,19 +169,19 @@
           <ul class="swiper-wrapper header-features">
             <!-- слайды -->
             <li class="swiper-slide header-features-item">
-              <svg class="features-icon">
+              <svg  width="36" height="36">
                 <use href="img/sprite.svg#1_time"></use>
               </svg>
               <p class="header-features-text">Непрерывная работа c 2017 года</p>
             </li>
             <li class="swiper-slide header-features-item">
-              <svg class="features-icon">
+              <svg width="36" height="36">
                 <use href="img/sprite.svg#2_sert"></use>
               </svg>
               <p class="header-features-text">Вся продукция сертифицирована</p>
             </li>
             <li class="swiper-slide header-features-item">
-              <svg class="features-icon">
+              <svg width="36" height="36">
                 <use href="img/sprite.svg#3_control"></use>
               </svg>
               <p class="header-features-text">
@@ -189,7 +189,7 @@
               </p>
             </li>
             <li class="swiper-slide header-features-item">
-              <svg class="features-icon">
+              <svg width="36" height="36">
                 <use href="img/sprite.svg#4_delivery"></use>
               </svg>
               <p class="header-features-text">
@@ -197,7 +197,7 @@
               </p>
             </li>
             <li class="swiper-slide header-features-item">
-              <svg class="features-icon">
+              <svg width="36" height="36">
                 <use href="img/sprite.svg#5_speed"></use>
               </svg>
               <p class="header-features-text">Оперативное производство</p>
@@ -207,12 +207,12 @@
           <!-- кнопки вперед назад -->
           <div class="slider-buttons">
             <div class="slider-button-prev">
-              <svg class="features-icon" width="36" height="24">
+              <svg  width="36" height="24">
                 <use href="img/sprite.svg#arrow-prev"></use>
               </svg>
             </div>
             <div class="slider-button-next">
-              <svg class="features-icon" width="36" height="24">
+              <svg  width="36" height="24">
                 <use href="img/sprite.svg#arrow-next"></use>
               </svg>
             </div>
@@ -385,7 +385,8 @@
     <section class="section-trademarks">
       <div class="container">
         <div class="separator"></div>
-        <h2 class="section-title">собственные торговые марки</h2>
+        <h2 class="section-title section-title_full">собственные торговые марки</h2>
+        <h2 class="section-title section-title_375px">собственные марки</h2>
         <div class="trademarks">
           <a href="#" class="trademark">
             <div class="tm-container">
