--- a/index.html
+++ b/index.html
@@ -381,53 +381,34 @@
         <!-- /.cards -->
       </div>
     </section>
-    <!-- /.section -->
-    <section class="section-trademarks">
+
+    <div class="section section-trademark">
       <div class="container">
         <div class="separator"></div>
         <h2 class="section-title section-title_full">собственные торговые марки</h2>
         <h2 class="section-title section-title_375px">собственные марки</h2>
-        <div class="trademarks">
-          <a href="#" class="trademark">
-            <div class="tm-container">
-              <div class="tm-image-container">
-                <img class="tm-image" src="/img/tm1_vector.svg" alt="Автохимия AG-Tech">
-              </div>
-              <!-- /.tm-image -->
-              <div class="tm-content">
-                <h3 class="tm-title">Автохимия AG-Tech</h3>
-                <p class="tm-text-bg">
-                  Для современного мира разбавленное изрядной долей эмпатии, рациональное мышление создаёт предпосылки для поставленных обществом задач.
-                </p>
-              </div>
-            </div>            
-            <p class="tm-text-sm">
-              Для современного мира разбавленное изрядной долей эмпатии, рациональное мышление создаёт предпосылки для поставленных обществом задач.
-            </p>
-            <!-- /.tm-content -->
-          </a>
-          <!-- /.trademark -->
-          <a href="#" class="trademark">
-            <div class="tm-container">
-              <div class="tm-image-container">
-                <img class="tm-image" src="/img/tm2_vector.svg" alt="Автохимия AP">
-              </div>
-              <!-- /.tm-image -->
-              <div class="tm-content">
-                <h3 class="tm-title">Автохимия AP</h3>
-                <p class="tm-text-bg">
-                  Для современного мира разбавленное изрядной долей эмпатии, рациональное мышление создаёт предпосылки для поставленных обществом задач.
-                </p>
-              </div>
-            </div>            
-            <p class="tm-text-sm">
-              Для современного мира разбавленное изрядной долей эмпатии, рациональное мышление создаёт предпосылки для поставленных обществом задач.
-            </p>
-            <!-- /.tm-content -->
-          </a>
-          <!-- /.trademark -->
+        <div class="trademark-cards">
+         <div class="trademark-card">
+          <svg class="trademark-card-logo">
+            <use href="img/sprite.svg#AGTECH"></use>
+          </svg>
+          <h3 class="trademark-card-title">Автохимия AG-Tech</h3>
+          <p class="trademark-card-text">Для современного мира разбавленное изрядной долей эмпатии, рациональное мышление создаёт предпосылки для поставленных обществом задач.</p>
+         </div>
+         <div class="trademark-card">
+          <svg class="trademark-card-logo" >
+            <use href="img/sprite.svg#AP"></use>
+          </svg>
+          <h3 class="trademark-card-title">Автохимия AP</h3>
+          <p class="trademark-card-text">Для современного мира разбавленное изрядной долей эмпатии, рациональное мышление создаёт предпосылки для поставленных обществом задач.</p>
+         </div> 
         </div>
-    </section>
+        <!-- /.trademark-cards -->
+      </div>
+      <!-- /.container -->
+    </div>
+    <!-- /.section section trademark -->
+
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
