--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 Безусловно, сплочённость команды профессионалов позволяет
                 оценить значение форм воздействия.
               </p>
-              <a href="#" class="steps-link">Оставить заявку</a>
+              <a href="#" class="button-link">Оставить заявку</a>
             </li>
             <li class="swiper-slide steps-item">
               <span class="steps-num">02</span>
@@ -408,7 +408,127 @@
       <!-- /.container -->
     </div>
     <!-- /.section section trademark -->
+    <section class="section founder">
+      <img src="img/founder.jpg" alt="" class="founder-photo">
+      <div class="container">
+        <div class="founder-content-wrapper">
+          <div class="founder-content">
+            <div class="separator"></div>
+            <h2 class="section-title section-title-founder">Отношение к делу <br> и к клиентам</h2>
+            <p class="founder-text">
+              Кстати, интерактивные прототипы описаны максимально подробно. Повседневная практика показывает, что укрепление и развитие внутренней структуры говорит о возможностях соответствующих условий активизации. Внезапно, независимые государства, которые представляют собой яркий пример континентально-европейского типа политической культуры, будут подвергнуты целой серии независимых исследований. С учётом сложившейся международной обстановки, синтетическое тестирование выявляет срочную потребность системы массового участия.                            
+            </p>
+            <p class="founder-text founder-text2">
+              А ещё действия представителей оппозиции, превозмогая сложившуюся непростую экономическую ситуацию, в равной степени предоставлены сами себе. Не следует, однако, забывать, что выбранный нами инновационный путь в значительной степени обусловливает важность дальнейших направлений развития.
+            </p>
+            <a href="#" class="button-link">
+              <p class="founder-link-1920"> Подробнее о компании</p>
+              <p class="founder-link-375"> О нашей миссии</p></a>
+          </div>
+          <!-- /.founder-content -->       
+        </div>
+        <!-- /.founder-content-wrapper -->
+         
+      </div>
+    </section>
+    <div class="section section clients">
+      <div class="container">
+        <div class="separator"></div>
+        <div class="clients-wrapper">
+          <div class="clients-content">
+            <h2 class="section-title section-title-client ">Производим аэрозольную продукцию для разных сфер</h2>
+            <ul class="clients-list">
+              <li class="clients-list-item">
+                <svg   width="30" height="30" class="client-list-icon">
+                  <use href="img/sprite.svg#cl_him"></use>
+                </svg>
+                Химические производства
+              </li>
+              <li class="clients-list-item">
+                <svg width="30" height="30" class="client-list-icon">
+                  <use href="img/sprite.svg#cl_car"></use>
+                </svg>
+                Автомойки
+              </li>
+              <li class="clients-list-item">
+                <svg width="30" height="30" class="client-list-icon">
+                  <use href="img/sprite.svg#cl_eat"></use>
+                </svg>
+                Пищевая продукция
+              </li>
+              <li class="clients-list-item">
+                <svg width="30" height="30" class="client-list-icon">
+                  <use href="img/sprite.svg#cl_brush"></use>
+                </svg>
+                Лаки и краски
+              </li>
+              <li class="clients-list-item">
+                <svg width="30" height="30" class="client-list-icon">
+                  <use href="img/sprite.svg#cl_cosmetic"></use>
+                </svg>
+                Косметические средства
+              </li>
+              <li class="clients-list-item">
+                <svg width="30" height="30" class="client-list-icon">
+                  <use href="img/sprite.svg#cl_car-cosm"></use>
+                </svg>
+                Автомобильная косметика
+              </li>
+              <li class="clients-list-item">
+                <svg width="30" height="30" class="client-list-icon">
+                  <use href="img/sprite.svg#cl_shirt"></use>
+                </svg>
+                Косметика по уходу за одеждой
+              </li>
+              <li class="clients-list-item">
+                <svg width="30" height="30" class="client-list-icon">
+                  <use href="img/sprite.svg#cl_boots"></use>
+                </svg>
+                Косметика по уходу за обувью
+              </li>
+              <li class="clients-list-item">
+                <svg width="30" height="30" class="client-list-icon">
+                  <use href="img/sprite.svg#cl_bricks"></use>
+                </svg>
+                Строительные материалы
+              </li>
+              <li class="clients-list-item">
+                <svg width="30" height="30" class="client-list-icon">
+                  <use href="img/sprite.svg#cl_more"></use>
+                </svg>
+                И многих других
+              </li>
+            </ul>
+          </div>
+          <!-- /.clients-content -->
+<div class="clients-logo-list">
+  <div class="clients-logo-item">
+    <img src="img/client.png" alt="" class="clients-logo">
+  </div>
+  <div class="clients-logo-item">
+    <img src="img/client.png" alt="" class="clients-logo">
+  </div>
+  <div class="clients-logo-item">
+    <img src="img/client.png" alt="" class="clients-logo">
+  </div>
+  <div class="clients-logo-item">
+    <img src="img/client.png" alt="" class="clients-logo">
+  </div>
+  <div class="clients-logo-item"><img src="img/client.png" alt="" class="clients-logo"></div>
+  <div class="clients-logo-item"><img src="img/client.png" alt="" class="clients-logo"></div>
+  <div class="clients-logo-item"><img src="img/client.png" alt="" class="clients-logo"></div>
+  <div class="clients-logo-item"><img src="img/client.png" alt="" class="clients-logo"></div>
+  <div class="clients-logo-item"><img src="img/client.png" alt="" class="clients-logo"></div>
+</div>
+          <!-- /.clients-logo -->
+        </div>
+        <!-- /.clients-wrapper -->
+            
 
+      </div>
+      <!-- /.container -->
+    </div>
+    <!-- /.section section clients -->
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
