add: adaptiv cta 1920-375px

--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
       <!-- /.container -->
     </div>
     <!-- /.section section clients -->
-    <section class="section blog">
+    <section class="section section-blog">
       <div class="container">
         <div class="separator"></div>
         <h2 class="section-title section-title-blog">
@@ -618,12 +618,12 @@
             <!-- кнопки вперед назад -->
             <div class="blog-buttons primary-buttons-wrapper">
               <div class="blog-button-prev primary-button-prev">
-                <svg class="features-icon" width="36" height="24">
+                <svg width="36" height="24">
                   <use href="img/sprite.svg#arrow-prev"></use>
                 </svg>
               </div>
               <div class="blog-button-next primary-button-prev">
-                <svg class="features-icon" width="36" height="24">
+                <svg width="36" height="24">
                   <use href="img/sprite.svg#arrow-next"></use>
                 </svg>
               </div>
@@ -673,7 +673,7 @@
             <!-- /.input-group-wrapper -->
             <div class="cta-form-footer">
               <button type="submit" class="button cta-form-button">
-                Оставить заявку
+                Отправить заявку
               </button>
               <div class="notify">
                 <svg class="notify-icon" width="14" height="14">
