add: adaptive for footer

--- a/index.html
+++ b/index.html
@@ -771,14 +771,14 @@
           </div>
           <!-- footer-menu-wrapper -->
           <div class="footer-menu-wrapper">          
-            <ul class="footer-menu-list">
-              <li class="footer-menu-item"></li>
+            <ul class="footer-menu-list, footer-menu-list-adapt">
+              <li class="footer-menu-item "></li>
                 <a href="#" class="footer-menu-link footer-menu-link-bold">О компании</a>
               </li>            
-              <li class="footer-menu-item"></li>
+              <li class="footer-menu-item "></li>
                 <a href="#" class="footer-menu-link footer-menu-link-bold">Новости</a>
               </li>
-              <li class="footer-menu-item">
+              <li class="footer-menu-item ">
                 <a href="#" class="footer-menu-link footer-menu-link-bold">Контакты</a>
               </li>
             </ul>
@@ -789,7 +789,7 @@
       <!-- container -->  
       <hr color="#ebebf0" class="footer-separator" />
       <div class="container">
-        <div class="footer-wrapper">
+        <div class="footer-wrapper fw-legal">
           <div class="footer-legal">
             <p class="footer-copyright">
               &copy; 2022 «Aliance Production». Все права защищены.
@@ -798,8 +798,11 @@
           </div>
           <!-- /.footer-legal -->
           <div class="footer-author">
-            <span class="made-in">
+            <span class="made-in-1920px">
               Сделано в
+            </span>
+            <span class="made-in-375px">
+              Дизайн и разработка:
             </span>
             <svg class="footer-author-icon" width="52" height="11">
               <use href="img/sprite.svg#ruso"></use>
