--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         >
       </div>
       <!-- /.header-phone -->
-      <button class="navbar-button button">
+      <button class="navbar-button button" data-toggle="modal">
         <svg class="button-icon" width="24" height="24">
           <use href="img/sprite.svg#phone"></use>
         </svg>
@@ -699,7 +699,7 @@
           </svg>
           <a href="tel:+74996861014" class="footer-phone">+7 (499) 686-10-14</a>
           <div class="footer-info">
-            <svg  width="14" height="14">
+            <svg width="14" height="14">
               <use href="img/sprite.svg#mestop"></use>
             </svg>
             <address class="footer-info-adress">
@@ -737,14 +737,16 @@
           <div class="footer-menu-wrapper">
             <h2 class="footer-menu-title">Контрактное производство</h2>
             <ul class="footer-menu-list footer-menu-column-2">
-              <li class="footer-menu-item"></li>
+              <li class="footer-menu-item">
                 <a href="#" class="footer-menu-link">Автомобильная химия</a>
               </li>
               <li class="footer-menu-item">
                 <a href="#" class="footer-menu-link">Бытовая химия</a>
               </li>
               <li class="footer-menu-item">
-                <a href="#" class="footer-menu-link">Дезинфицирующие средства</a>
+                <a href="#" class="footer-menu-link"
+                  >Дезинфицирующие средства</a
+                >
               </li>
               <li class="footer-menu-item">
                 <a href="#" class="footer-menu-link">Пищевые аэрозоли</a>
@@ -761,7 +763,7 @@
           <div class="footer-menu-wrapper">
             <h2 class="footer-menu-title">Собственные марки</h2>
             <ul class="footer-menu-list">
-              <li class="footer-menu-item"></li>
+              <li class="footer-menu-item">
                 <a href="#" class="footer-menu-link">Автохимия AG-Tech</a>
               </li>
               <li class="footer-menu-item">
@@ -770,23 +772,29 @@
             </ul>
           </div>
           <!-- footer-menu-wrapper -->
-          <div class="footer-menu-wrapper">          
+          <div class="footer-menu-wrapper">
             <ul class="footer-menu-list, footer-menu-list-adapt">
-              <li class="footer-menu-item "></li>
-                <a href="#" class="footer-menu-link footer-menu-link-bold">О компании</a>
-              </li>            
-              <li class="footer-menu-item "></li>
-                <a href="#" class="footer-menu-link footer-menu-link-bold">Новости</a>
+              <li class="footer-menu-item">
+                <a href="#" class="footer-menu-link footer-menu-link-bold"
+                  >О компании</a
+                >
               </li>
-              <li class="footer-menu-item ">
-                <a href="#" class="footer-menu-link footer-menu-link-bold">Контакты</a>
+              <li class="footer-menu-item">
+                <a href="#" class="footer-menu-link footer-menu-link-bold"
+                  >Новости</a
+                >
+              </li>
+              <li class="footer-menu-item">
+                <a href="#" class="footer-menu-link footer-menu-link-bold"
+                  >Контакты</a
+                >
               </li>
             </ul>
           </div>
-          <!-- footer-menu-wrapper -->        
+          <!-- footer-menu-wrapper -->
         </div>
       </div>
-      <!-- container -->  
+      <!-- container -->
       <hr color="#ebebf0" class="footer-separator" />
       <div class="container">
         <div class="footer-wrapper fw-legal">
@@ -798,12 +806,8 @@
           </div>
           <!-- /.footer-legal -->
           <div class="footer-author">
-            <span class="made-in-1920px">
-              Сделано в
-            </span>
-            <span class="made-in-375px">
-              Дизайн и разработка:
-            </span>
+            <span class="made-in-1920px"> Сделано в </span>
+            <span class="made-in-375px"> Дизайн и разработка: </span>
             <svg class="footer-author-icon" width="52" height="11">
               <use href="img/sprite.svg#ruso"></use>
             </svg>
@@ -812,8 +816,70 @@
         </div>
       </div>
     </footer>
-    
-
+    <div class="modal">
+      <div class="modal-dialog">
+        <h2 class="modal-title">Есть вопросы?</h2>
+        <a href="#" class="modal-close">
+          <svg class="close-icon" width="24" height="24">
+            <use href="img/sprite.svg#mw_close"></use>
+          </svg>
+        </a>
+        <p class="modal-text">
+          Оставьте заявку, наш менеджер свяжется с Вами в ближайшее время
+          ответит на все интересующие вопросы и поможем даже в самых сложных
+          случаях!
+        </p>
+        <form action="" class="modal-form">
+          <div class="input-group-wrapper input-group-vertical">
+            <div class="input-group modal-input-group">
+              <input
+                id="modal-user-name"
+                type="text"
+                class="input modal-input"
+                placeholder=" "
+              />
+              <label
+                class="input-group-label modal-input-label"
+                for="modal-user-name"
+                >Имя</label
+              >
+            </div>
+            <!-- /.input-group -->
+            <div class="input-group modal-input-group">
+              <input
+                id="modal-user-phone"
+                type="tel"
+                class="input modal-input"
+                placeholder=" "
+              />
+              <label
+                class="input-group-label modal-input-label"
+                for="modal-user-phone"
+                >Номер телефона</label
+              >
+            </div>
+            <!-- /.input-group -->
+          </div>
+          <!-- /.input-group-wrapper -->
+          <div class="modal-form-footer">
+            <button type="submit" class="button modal-form-button">
+              Отправить заявку
+            </button>
+            <div class="notify">
+              <svg class="notify-icon" width="14" height="14">
+                <use href="img/sprite.svg#shield"></use>
+              </svg>
+              <p class="notify-text">
+                Обращаясь к нам вы получаете не только профессиональную работу,
+                но и абсолютную конфиденциальность информации!
+              </p>
+            </div>
+          </div>
+          <!-- /.modal-form-footer -->
+        </form>
+      </div>
+    </div>
+    <!-- modal -->
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
