add: 3 header-titles

--- a/about.html
+++ b/about.html
@@ -13,13 +13,13 @@
     <link rel="stylesheet" href="./css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Aliance Production</title>
+    <title>О компании</title>
   </head>
-  <body class="front-page">
+  <body>
     <div class="mobile-menu">
       <ul class="mobile-menu-nav">
         <li class="mobile-menu-nav-item">
-          <a href="/about.html" class="mobile-menu-link">О компании</a>
+          <a href="#" class="mobile-menu-link">О компании</a>
         </li>
         <li class="mobile-menu-nav-item">
           <a href="#" class="mobile-menu-link">Контрактное производство</a>
@@ -95,7 +95,7 @@
       </div>
       <!-- /.social -->
     </div>
-    <nav class="navbar">
+    <nav class="navbar navbar-light">
       <a href="#" class="mobile-menu-toggle">
         <div class="mobile-menu-line"></div>
         <div class="mobile-menu-line"></div>
@@ -114,7 +114,7 @@
       </a>
       <ul class="header-nav">
         <li class="header-nav-item">
-          <a href="/about.html" class="header-nav-link">О компании</a>
+          <a href="#" class="header-nav-link">О компании</a>
         </li>
         <li class="header-nav-item">
           <a href="#" class="header-nav-link">Контрактное производство</a>
@@ -146,281 +146,21 @@
       </button>
     </nav>
     <!-- /.navbar -->
-    <header class="header header-image">
-      <div class="container">
-        <div class="header-content">
-          <div class="separator"></div>
-          <h1 class="header-title">
-            Комплексное обеспечение товарами и расходными материалами бизнеса
-          </h1>
-          <p class="header-text">
-            Высокий уровень вовлечения представителей целевой аудитории является
-            четким доказательством простого факта: высококачественный прототип
-            будущего проекта напрямую зависит от анализа существующих паттернов
-            поведения.
-          </p>
-          <div class="company-button button">Подробнее о компании</div>
-        </div>
-        <!-- /.header-content -->
 
-        <!-- основной блок слайдера -->
-        <div class="swiper">
-          <!-- обертка слайдера -->
-          <ul class="swiper-wrapper header-features">
-            <!-- слайды -->
-            <li class="swiper-slide header-features-item">
-              <svg width="36" height="36">
-                <use href="img/sprite.svg#1_time"></use>
-              </svg>
-              <p class="header-features-text">Непрерывная работа c 2017 года</p>
-            </li>
-            <li class="swiper-slide header-features-item">
-              <svg width="36" height="36">
-                <use href="img/sprite.svg#2_sert"></use>
-              </svg>
-              <p class="header-features-text">Вся продукция сертифицирована</p>
-            </li>
-            <li class="swiper-slide header-features-item">
-              <svg width="36" height="36">
-                <use href="img/sprite.svg#3_control"></use>
-              </svg>
-              <p class="header-features-text">
-                Контроль качества на всех этапах
-              </p>
-            </li>
-            <li class="swiper-slide header-features-item">
-              <svg width="36" height="36">
-                <use href="img/sprite.svg#4_delivery"></use>
-              </svg>
-              <p class="header-features-text">
-                Возможны поставки по всей России
-              </p>
-            </li>
-            <li class="swiper-slide header-features-item">
-              <svg width="36" height="36">
-                <use href="img/sprite.svg#5_speed"></use>
-              </svg>
-              <p class="header-features-text">Оперативное производство</p>
-            </li>
-          </ul>
-
-          <!-- кнопки вперед назад -->
-          <div class="primary-buttons-wrapper slider-buttons">
-            <div class="slider-button-prev">
-              <svg width="36" height="24">
-                <use href="img/sprite.svg#arrow-prev"></use>
-              </svg>
-            </div>
-            <div class="slider-button-next">
-              <svg width="36" height="24">
-                <use href="img/sprite.svg#arrow-next"></use>
-              </svg>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- /.container -->
-    </header>
-    <section class="section section-light">
+    <section class="bg-grey header_inner1">
       <div class="container">
         <div class="separator"></div>
-        <h2 class="section-title">схема работы</h2>
-        <!-- основной блок слайдера -->
-        <div class="swiper2">
-          <!-- обертка слайдера -->
-          <ul class="swiper-wrapper steps">
-            <!-- слайды -->
-            <li class="swiper-slide steps-item">
-              <span class="steps-num">01</span>
-              <h3 class="steps-title">Знакомство</h3>
-              <p class="steps-text">
-                Безусловно, сплочённость команды профессионалов позволяет
-                оценить значение форм воздействия.
-              </p>
-              <a href="#" class="button-link">Оставить заявку</a>
-            </li>
-            <li class="swiper-slide steps-item">
-              <span class="steps-num">02</span>
-              <h3 class="steps-title">Заключение договора</h3>
-              <p class="steps-text">
-                Лишь интерактивные прототипы призваны к ответу.
-              </p>
-            </li>
-            <li class="swiper-slide steps-item">
-              <span class="steps-num">03</span>
-              <h3 class="steps-title">Производство</h3>
-              <p class="steps-text">
-                А также стремящиеся вытеснить традиционное производство,
-                нанотехнологии функционально разнесены на независимые элементы.
-              </p>
-            </li>
-            <li class="swiper-slide steps-item">
-              <span class="steps-num">04</span>
-              <h3 class="steps-title">Доставка</h3>
-              <p class="steps-text">
-                В частности, экономическая повестка сегодняшнего дня говорит о
-                возможностях приоритизации разума над эмоциями.
-              </p>
-            </li>
-          </ul>
-
-          <!-- кнопки вперед назад -->
-          <div class="steps-slider-buttons primary-buttons-wrapper">
-            <div class="steps-slider-button-prev primary-button-prev">
-              <svg class="features-icon" width="36" height="24">
-                <use href="img/sprite.svg#arrow-prev"></use>
-              </svg>
-            </div>
-            <div class="steps-slider-button-next primary-button-next">
-              <svg class="features-icon" width="36" height="24">
-                <use href="img/sprite.svg#arrow-next"></use>
-              </svg>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- /.container -->
-    </section>
-    <section class="section production">
-      <div class="container">
-        <div class="separator"></div>
-        <h2 class="section-title">Контрактное производство</h2>
-        <div class="cards">
-          <a href="#" class="card">
-            <div class="card-content">
-              <h3 class="card-title">Автомобильная химия</h3>
-              <p class="card-text">
-                Безусловно, сплочённость команды профессионалов позволяет
-                оценить значение форм воздействия.
-              </p>
-            </div>
-            <!-- /.card-content -->
-
-            <img
-              src="/img/avto-him.png"
-              alt="Автомобильная химия"
-              class="card-image"
-            />
-          </a>
-          <a href="#" class="card">
-            <div class="card-content">
-              <h3 class="card-title">Бытовая химия</h3>
-              <p class="card-text">
-                А также стремящиеся вытеснить традиционное производство,
-                нанотехнологии функционально разнесены на независимые элементы.
-              </p>
-            </div>
-            <!-- /.card-content -->
-
-            <img
-              src="/img/bit-him.png"
-              alt="Бытовая химия"
-              class="card-image"
-            />
-          </a>
-          <a href="#" class="card">
-            <div class="card-content">
-              <h3 class="card-title">Дезинфицирующие средства</h3>
-              <p class="card-text">
-                Лишь интерактивные прототипы призваны к ответу.
-              </p>
-            </div>
-            <!-- /.card-content -->
-
-            <img
-              src="/img/dezinfect.png"
-              alt="Дезинфицирующие средства"
-              class="card-image"
-            />
-          </a>
-          <a href="#" class="card">
-            <div class="card-content">
-              <h3 class="card-title">Пищевые аэрозоли</h3>
-              <p class="card-text">
-                Безусловно, сплочённость команды профессионалов позволяет
-                оценить значение форм воздействия.
-              </p>
-            </div>
-            <!-- /.card-content -->
-
-            <img
-              src="/img/dezinfect.png"
-              alt="Пищевые аэрозоли"
-              class="card-image"
-            />
-          </a>
-          <a href="#" class="card">
-            <div class="card-content">
-              <h3 class="card-title">Косметическая продукция</h3>
-              <p class="card-text">
-                Лишь интерактивные прототипы призваны к ответу.
-              </p>
-            </div>
-            <!-- /.card-content -->
-
-            <img
-              src="/img/avto-him.png"
-              alt="Косметическая продукция"
-              class="card-image"
-            />
-          </a>
-          <a href="#" class="card">
-            <div class="card-content">
-              <h3 class="card-title">Краски аэрозольные</h3>
-              <p class="card-text">
-                А также стремящиеся вытеснить традиционное производство,
-                нанотехнологии функционально разнесены на независимые элементы.
-              </p>
-            </div>
-            <!-- /.card-content -->
-
-            <img
-              src="/img/bit-him.png"
-              alt="Краски аэрозольные"
-              class="card-image"
-            />
-          </a>
-        </div>
-        <!-- /.cards -->
+        <h1 class="section-title-about">О компании</h1>
+        <ul class="breadcrumb breadcrumb_light">
+          <li>
+            <a class="breadcrumb_li" href="/index.html">Главная</a>
+          </li>
+          <li><a class="breadcrumb_li" href="/about.html">О компании</a></li>
+        </ul>
       </div>
     </section>
+    <!-- section header_inner -->
 
-    <div class="section section-trademark">
-      <div class="container">
-        <div class="separator"></div>
-        <h2 class="section-title section-title_full">
-          собственные торговые марки
-        </h2>
-        <h2 class="section-title section-title_375px">собственные марки</h2>
-        <div class="trademark-cards">
-          <div class="trademark-card">
-            <svg class="trademark-card-logo">
-              <use href="img/sprite.svg#AGTECH"></use>
-            </svg>
-            <h3 class="trademark-card-title">Автохимия AG-Tech</h3>
-            <p class="trademark-card-text">
-              Для современного мира разбавленное изрядной долей эмпатии,
-              рациональное мышление создаёт предпосылки для поставленных
-              обществом задач.
-            </p>
-          </div>
-          <div class="trademark-card">
-            <svg class="trademark-card-logo">
-              <use href="img/sprite.svg#AP"></use>
-            </svg>
-            <h3 class="trademark-card-title">Автохимия AP</h3>
-            <p class="trademark-card-text">
-              Для современного мира разбавленное изрядной долей эмпатии,
-              рациональное мышление создаёт предпосылки для поставленных
-              обществом задач.
-            </p>
-          </div>
-        </div>
-        <!-- /.trademark-cards -->
-      </div>
-      <!-- /.container -->
-    </div>
-    <!-- /.section section trademark -->
     <section class="section founder">
       <img src="img/founder.jpg" alt="" class="founder-photo" />
       <div class="container">
@@ -567,74 +307,6 @@
       <!-- /.container -->
     </div>
     <!-- /.section section clients -->
-    <section class="section section-blog">
-      <div class="container">
-        <div class="separator"></div>
-        <h2 class="section-title section-title-blog">
-          Блог экспертов в области производства
-        </h2>
-        <!-- Slider main container -->
-        <div class="blog-slider">
-          <!-- Additional required wrapper -->
-          <div class="swiper-wrapper">
-            <!-- Slides -->
-            <a href="#" class="swiper-slide blog-card"
-              ><img src="/img/blog-photo1.jpg" alt="" class="blog-card-image" />
-              <h3 class="blog-card-title">
-                Современная методология разработки одухотворила всех причастных
-              </h3>
-              <p class="blog-card-text">
-                Действия представителей оппозиции, превозмогая сложившуюся
-                непростую экономическую ситуацию, в равной степени
-                предоставлены...
-              </p>
-            </a>
-            <a href="#" class="swiper-slide blog-card"
-              ><img src="/img/blog-photo2.jpg" alt="" class="blog-card-image" />
-              <h3 class="blog-card-title">
-                Сложно сказать, почему жизнь прекрасна
-              </h3>
-              <p class="blog-card-text">
-                Сложно сказать, почему элементы политического процесса
-                функционально разнесены на независимые элементы. Безусловно,
-                высокотехнологичная...
-              </p>
-            </a>
-            <a href="#" class="swiper-slide blog-card"
-              ><img src="/img/blog-photo2.jpg" alt="" class="blog-card-image" />
-              <h3 class="blog-card-title">
-                Сложно сказать, почему жизнь прекрасна
-              </h3>
-              <p class="blog-card-text">
-                Сложно сказать, почему элементы политического процесса
-                функционально разнесены на независимые элементы. Безусловно,
-                высокотехнологичная...
-              </p>
-            </a>
-          </div>
-
-          <div class="blog-slider-footer">
-            <a href="#" class="button-link">Весь блог</a>
-            <!-- кнопки вперед назад -->
-            <div class="blog-buttons primary-buttons-wrapper">
-              <div class="blog-button-prev primary-button-prev">
-                <svg width="36" height="24">
-                  <use href="img/sprite.svg#arrow-prev"></use>
-                </svg>
-              </div>
-              <div class="blog-button-next primary-button-prev">
-                <svg width="36" height="24">
-                  <use href="img/sprite.svg#arrow-next"></use>
-                </svg>
-              </div>
-            </div>
-            <!-- blog-buttons -->
-          </div>
-          <!-- /.blog-slider-footer -->
-        </div>
-      </div>
-      <!-- /.container -->
-    </section>
     <section class="cta">
       <div class="bg-grey section-cta">
         <img src="/img/cta.png" alt="call to action" class="cta-image" />
